ext/raymath/raymath_bindings.odin


    @(link_name="QuaternionLength")
    quaternion_length :: proc(q : Quaternion) -> _c.float ---;

    @(link_name="QuaternionNormalize")
    quaternion_normalize :: proc(q : Quaternion) -> Quaternion ---;

    @(link_name="QuaternionInvert")
    quaternion_invert :: proc(q : Quaternion) -> Quaternion ---;

    @(link_name="QuaternionMultiply")
    quaternion_multiply :: proc(
        q1 : Quaternion,
        q2 : Quaternion
    ) -> Quaternion ---;

    @(link_name="QuaternionLerp")
    quaternion_lerp :: proc(
        q1 : Quaternion,
        q2 : Quaternion,
        amount : _c.float
    ) -> Quaternion ---;

    @(link_name="QuaternionNlerp")
    quaternion_nlerp :: proc(
        q1 : Quaternion,
        q2 : Quaternion,
        amount : _c.float
    ) -> Quaternion ---;

    @(link_name="QuaternionSlerp")
    quaternion_slerp :: proc(
        q1 : Quaternion,
        q2 : Quaternion,
        amount : _c.float
    ) -> Quaternion ---;

    @(link_name="QuaternionFromVector3ToVector3")
    quaternion_from_vector3_to_vector3 :: proc(
        from : Vector3,
        to : Vector3
    ) -> Quaternion ---;

    @(link_name="QuaternionFromMatrix")
    quaternion_from_matrix :: proc(mat : Matrix) -> Quaternion ---;

    @(link_name="QuaternionToMatrix")
    quaternion_to_matrix :: proc(q : Quaternion) -> Matrix ---;

    @(link_name="QuaternionFromAxisAngle")
    quaternion_from_axis_angle :: proc(
        axis : Vector3,
        angle : _c.float
    ) -> Quaternion ---;

    @(link_name="QuaternionToAxisAngle")
    quaternion_to_axis_angle :: proc(
        q : Quaternion,
        out_axis : ^Vector3,
        out_angle : ^_c.float
    ) ---;

    @(link_name="QuaternionFromEuler")
    quaternion_from_euler :: proc(
        roll : _c.float,
        pitch : _c.float,
        yaw : _c.float
    ) -> Quaternion ---;

    @(link_name="QuaternionToEuler")
    quaternion_to_euler :: proc(q : Quaternion) -> Vector3 ---;

    @(link_name="QuaternionTransform")
    quaternion_transform :: proc(
        q : Quaternion,
        mat : Matrix
    ) -> Quaternion ---;

}
